# AutoSkillSFML

./: CMakeLists.txt  README.md
CMake/: SetSourceGroups.cmake
src/: Player.cpp  Player.hpp  main.cpp
